[package]
name = "volterra-stability"
version = "0.1.0"
edition = "2021"
description = "Domain-agnostic Volterra integral stability analysis for distributed systems"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
proptest = "1"
